# QtQuick-sample

hello_world/: CMakeLists.txt  package.xml
opencv_test/: CMakeLists.txt  package.xml
opencv_test/src/: opencv_cv_bridge_test.cpp
qt_image_swipe_test/: CMakeLists.txt  package.xml
qt_image_swipe_test/src/: Page1Form.ui.qml  image_receiver.cpp  image_receiver.h  main.cpp  swipe_test  swipe_test.pro
qt_test/: CMakeLists.txt  package.xml
qt_test/src/: main.cpp  main.qml
sample1/: main.qml
